# meticoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: common.init.vcxproj
ci/test/: 05_before_script.sh  (+3 more)
contrib/: README.md  gitian-build.sh  install_db4.sh  tidy_datadir.sh
depends/: README.md  config.guess  config.sub  description.md
doc/: README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  reduce-traffic.md  release-process.md  tor.md  travis-ci.md  zmq.md
doc/man/: Makefile.am  litecoin-cli.1  litecoin-qt.1  litecoin-tx.1  litecoin-wallet.1  litecoind.1  meticoin-cli.1  meticoin-qt.1  meticoin-tx.1  meticoin-wallet.1  meticoind.1
scripts/: fork.py  key.py
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  init.cpp  net.cpp  net_processing.cpp  netaddress.h  pow.cpp  txdb.cpp  util.cpp  validation.cpp
test/: README.md  get_previous_releases.py
(+334 files in other folders)
